Solves a simple overlook on the scrollbar beautification

--- a/src/chirptask/gui/layoutStyle.css
+++ b/src/chirptask/gui/layoutStyle.css
@@ -68,6 +68,12 @@
 	-fx-fill:rgba(14.0,97.0,185.0);
 }
 
+.hashtag-scroll {
+    -fx-border-width: 0.0px 0.0px 1.0px 0.0px;
+    -fx-border-style: solid;
+    -fx-border-color: transparent transparent #ddd transparent;
+}
+
 .hashtag-text:hover, .category-text:hover {
 	-fx-cursor:hand;
 	-fx-underline:true;
